--- a/src/style/App.css
+++ b/src/style/App.css
@@ -12,21 +12,13 @@
   --font-family: "Rubik", sans-serif;
   --btn-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   --illustration-shadow: 30px 30px 0 rgba(0, 0, 0, 1);
+
+  --max-width: 82.5rem;
 }
 
 body {
   font-family: var(--font-family);
 }
-
-/* .navbar.active { */
-/*   background-color: var(--neutral-blue-950); */
-/* } */
-/**/
-/* .navlist.inactive { */
-/*   max-height: 0; */
-/*   overflow: hidden; */
-/*   padding: 0; */
-/* } */
 
 @media (prefers-reduced-motion: reduce) {
   .navlist,
